--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@ body {
   height: 100%;
   margin: 0;
 }
+
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-color: #f0f0f0; /* Light grey */
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
